# nadabot-app

./: .eslintrc.json  .gitignore  FUNDING.json  LICENSE  README.md  constants.ts  package-lock.json  package.json  routes.ts  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: enhancement.md  feature_request.md
assets/icons/: bell-notification-icon.tsx  filter-icon.tsx  (+3 more)
common/: constants.ts
components/: ChecksSection.tsx  ContactInfo.tsx  ContractInfo.tsx  ExploreSection.tsx  Footer.tsx  InvitationHeroSection.tsx  NavBar.tsx  ProviderAdminSettings.tsx  ProviderSettings.tsx  UploadImage.tsx
contexts/: DialogsProvider.tsx  SnackbarProvider.tsx  SpinnerProvider.tsx  Web3AuthProvider.tsx
fake_contracts/: readme.md
fake_contracts/sybil_provider/: Cargo.toml  readme.md
fake_contracts/sybil_provider/scripts/: build.sh  deploy.sh
fake_contracts/sybil_provider/src/: lib.rs
hooks/: useBreakPoints.ts  useCheckPendingVerification.ts  useDialogs.ts  useFilteredProviders.ts  useGetProviderById.ts  useIsAdminPage.ts  useIsHumanCacheCheck.ts  useIsHumanFilteredProviders.ts  useProviderStatusChecker.ts  useSnackbars.ts  useSpinner.ts  useTransactionDetection.ts  useVerifiedProviderSuccess.ts  useViewStampURLQuery.ts  useWeb3Auth.ts  useWindowTabFocus.ts
pages/: _app.tsx  _document.tsx  globals.css  index.tsx  layout.tsx  providers.tsx
theme/: colors.ts  icons.ts  theme.ts
utils/: getDocumentResolution.ts  getNearSocialProfileAvatarImage.ts  insertIsHumanToProvider.ts  isHumanCacheObservable.ts  observable.ts  observables.ts  providerSorts.ts  time.ts
(+318 files in other folders)
